k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend

spec:

  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:

      containers:

        - name: backend

          image: msalgados-backend:1.0

          imagePullPolicy: IfNotPresent

          ports:

            - containerPort: 3000

          readinessProbe:

            httpGet:
              path: /health
              port: 3000

            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:

            httpGet:
              path: /
              port: 3000

            initialDelaySeconds: 20
            periodSeconds: 10
