k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres

spec:

  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:

    metadata:
      labels:
        app: postgres

    spec:

      containers:

        - name: postgres

          image: postgres:15

          ports:
            - containerPort: 5432

          volumeMounts:

            - name: database-init
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql

      volumes:

        - name: database-init

          configMap:
            name: app-config
