k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: msalgados-ingress

spec:

  ingressClassName: nginx

  rules:

    - host: msalgados.local

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:

              service:
                name: frontend-service
                port:
                  number: 80
